# Docs

./: README.md  pyproject.toml  requirements.txt
docs/: README.md  ai-agent-copilot-env-guide.md  ai-agent-copilot-refinement-lessons.md  ai-design-docs-10x-faster.md  ai-spec-best-practices-2026.md  project_instrumction_md  ui-design-system-best-practices.md
examples/: django_example.py  flask_example.py
github-ai-config/skills/empirical-prompt-tuning/: SKILL.md
github-ai-config/skills/empirical-prompt-tuning/references/: detail.md
kinetic/: __init__.py  __main__.py  app.py  cli.py  django_ext.py  flask_ext.py  manager.py
kinetic/static/css/: viewer.css
kinetic/templates/kinetic/: viewer.html
mdviewer/: __init__.py  __main__.py  app.py  cli.py  django_ext.py  flask_ext.py  manager.py
mdviewer/static/css/: viewer.css
mdviewer/templates/mdviewer/: viewer.html
